<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <androidx.constraintlayout.widget.Guideline
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:layout_constraintGuide_begin="110dp" android:id="@+id/guideline2"/>
    <TextView
            android:text="@string/course_title"
            android:layout_width="102dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView2"
            app:layout_constraintBaseline_toBaselineOf="@+id/title_edit_text"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toStartOf="@+id/guideline2" android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"/>
    <TextView
            android:text="@string/course_ects"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView4"
            app:layout_constraintBaseline_toBaselineOf="@+id/ects_edit_text"
            app:layout_constraintEnd_toStartOf="@+id/guideline2" android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp"/>
    <androidx.constraintlayout.widget.Guideline
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:layout_constraintGuide_begin="220dp" android:id="@+id/guideline3"/>
    <TextView
            android:text="@string/course_description"
            android:layout_width="395dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView6"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="@+id/guideline3" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"/>
    <androidx.constraintlayout.widget.Guideline
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:layout_constraintGuide_begin="351dp" android:id="@+id/guideline"/>
    <Button
            android:text="@string/update_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/update_button"
            app:layout_constraintStart_toEndOf="@+id/add_button" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toStartOf="@+id/delete_button" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="@+id/guideline"/>
    <Button
            android:text="@string/delete_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/delete_button"
            app:layout_constraintStart_toEndOf="@+id/update_button" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="@+id/guideline"/>
    <Button
            android:text="@string/add_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/add_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toStartOf="@+id/update_button"
            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="@+id/guideline"/>
    <Button
            android:text="@string/search_button"
            android:layout_width="102dp"
            android:layout_height="wrap_content"
            android:id="@+id/search_button"
            app:layout_constraintBaseline_toBaselineOf="@+id/search_edit_text"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toStartOf="@+id/guideline2"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp" app:layout_constraintHorizontal_bias="1.0"/>
    <EditText
            android:layout_width="286dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/search_edit_text"
            android:hint="@string/search_hint"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="8dp" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="@+id/guideline2" android:layout_marginLeft="8dp"/>
    <TextView
            android:text="@string/course_code"
            android:layout_width="102dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView"
            app:layout_constraintBaseline_toBaselineOf="@+id/code_edit_text"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toStartOf="@+id/guideline2"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"/>
    <EditText
            android:layout_width="286dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/code_edit_text"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/search_edit_text" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="@+id/guideline2" android:layout_marginLeft="8dp"
            android:hint="@string/course_code"/>
    <EditText
            android:layout_width="286dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/title_edit_text"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/code_edit_text" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="@+id/guideline2" android:layout_marginLeft="8dp"
            android:hint="@string/course_title"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/ects_edit_text" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="@+id/guideline2" android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/title_edit_text"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/guideline3"
            android:hint="@string/course_ects"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:inputType="textMultiLine"
            android:gravity="start|top"
            android:ems="10"
            android:id="@+id/description_edit_text" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView6" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="8dp" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/guideline"
            android:hint="@string/course_description"/>

</androidx.constraintlayout.widget.ConstraintLayout>